# SerializibleFSM

./: .editorconfig  LICENSE  README.md  SerializableFSM.hpp  meson.build  meson_options.txt
.reuse/: dep5
examples/: meson.build  simple_switch.cpp  three_level_switch.cpp
