# Copyright © 2024 Stephan Lachnit <stephanlachnit@debian.org>
# SPDX-License-Identifier: MIT

ex_simple_switch_exe = executable('simple_switch',
    sources: 'simple_switch.cpp',
    dependencies: SerializableFSM_dep,
    build_by_default: get_option('examples'),
)

ex_simple_switch_exe = executable('three_level_switch',
    sources: 'three_level_switch.cpp',
    dependencies: SerializableFSM_dep,
    build_by_default: get_option('examples'),
)
